# fedi-emoji-tool

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  build.Dockerfile  cabal.project  fedi-emoji-tool.cabal
app/: Main.hs
src/Web/: URL.hs
src/Web/Application/Fediverse/Mastodon/: Base.hs  Emoji.hs
src/Web/Application/Fediverse/Misskey/: Base.hs  Drive.hs  Emoji.hs  Federation.hs
